<resources>
    <string name="app_name">Bloomli</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Sign In</string>
    <string name="forgot_your_password">Forgot Password?</string>

    <string name="dont_you_have_account"><font color="#000000">Don\'t have an account?</font> <font color="#FF9595">Sign Up</font></string>
    <string name="you_have_account"><font color="#000000">Already have an account?</font> <font color="#FF9595">Sign In</font></string>
    <string name="mindfulness_happiness"><![CDATA[Mindfulness & Happiness]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note Title</string>
    <string name="add_new_note">Add new note</string>
    <string name="save_note">Save Note</string>
    <string name="section">Section:</string>
    <string name="introduction">Introduction</string>
    <string name="blooms">Blooms</string>
    <string name="select_bloom">Select Bloom</string>
    <string name="select_your_quiz_avatar">Select Your Quiz Avatar</string>
    <string name="write_note_here">Write note here..</string>
    <string name="zara">Zara</string>
    <string name="select">Select</string>
    <string name="contactus">"Contact Us "</string>
    <string name="need_some_help">Need Some Help?</string>
    <string name="description">If you are experencing some problems, we are here to help you so please feel free to get in touch with us.</string>
    <string name="email_us">Email Us</string>
    <string name="any_queries">Any Queries?</string>
    <string name="submit">Submit</string>
    <string name="describe_your_problem">Describe Your Problem</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_ve_completed_the">You\'ve completed the</string>
    <string name="love_at_first">LOVE AT FIRST</string>
    <string name="your_score">Your Score:</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="upload_home_banner">Upload Home Banner</string>
    <string name="upload_home_ban">Upload the banner to show on home screen</string>
    <string name="upload_banner">Upload Banner</string>
    <string name="listen_desc">We\'d love you to get involved on social media! Download a selection of social media cards to share with your friends - and make sure you tag us @BookTrust!</string>
    <string name="create_new_list">Create new list</string>
    <string name="enter_quiz_name">Enter quiz name</string>
    <string name="existing_quizes">Existing quizes</string>
    <string name="add_now">Add Now</string>
    <string name="free_plan">Free Plan</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="free_daily_book">Free Daily Book</string>
    <string name="limited_usage">Limited usage</string>
    <string name="silver">Silver</string>
    <string name="_7_days_free_trial">7 Days free trial</string>
    <string name="gold">Gold</string>
    <string name="hi_john">Hi John</string>
    <string name="create_new_quiz">Create New Quiz</string>
    <string name="add_questions">Add Questions</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="select_time_zone">Select Time Zone</string>
    <string name="random_time">Random Time</string>
    <string name="random_timedes">( You will be Quizzed randomly between 7am - 8pm)</string>
    <string name="specific_time">Specific Time</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time</string>
    <string name="threetimes">3 Times</string>
    <string name="add_to_my_quiz">Add to My Quiz</string>
    <string name="add_to_bloomli_quiz">Add to BLOOMLI Quiz</string>
    <string name="twice_shy">Twice Shy</string>
    <string name="quiz_completed">Quiz completed</string>
    <string name="build_confidence_quiz">Build Confidence Quiz</string>
    <string name="john_ven">John Ven</string>
    <string name="dummy_text">What ability does the Wolaxian arach nid use to knock out her victims?</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="bloomli_gamify">Bloomli Gamify</string>
    <string name="stepOneDes">Choose to upload a new Gamify profile or leave empty and use your existing Bloomli profile</string>
    <string name="where_members_quiz_each_other">Where members quiz each other</string>
    <string name="upload_quiz_profile">Upload Quiz Profile</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="stepTwoDes"><![CDATA[If you want to submit  a quiz you can create a Multiple Choice  Q&A or upload one of your existing Bloomli quizzes]]></string>
    <string name="stepTwoHead">Choose to \'TAKE\' or \'SUBMIT\' a quiz</string>
    <string name="take_your_quiz">Take your Quiz</string>
    <string name="create_submit_quiz"><![CDATA[Create & Submit your Quiz]]></string>
    <string name="welcome_to">Welcome to</string>
    <string name="start_creating_questions">Start Creating Questions</string>
    <string name="add_existing_quiz">Add Existing Quiz</string>
    <string name="your_question">Your Question</string>
    <string name="add_choice">Add Choice</string>
    <string name="dummy_Ques">What percentage of notes have nida done from his teacher?</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="select_time">Select Time</string>
    <string name="fun_fact_des">Reading 6 minutes per day reduces stress by 68%</string>
    <string name="repeat_quiz">Repeat Quiz</string>
    <string name="love_at">Love at First</string>
    <string name="best_book_for_drawing">Best Book for Drawing</string>
    <string name="bloomone">Bloom: 1</string>
    <string name="conclusion">Conclusion</string>
</resources>