<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginVertical="@dimen/_15sdp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/regText"
                    android:text="@string/section"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/darker_grey"/>

                <TextView
                    style="@style/regText"
                    android:text="@string/blooms"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:textColor="@color/app_pink"/>

            </LinearLayout>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/powerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_bloom"
                app:spinner_arrow_show="true"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="@color/black"
                android:fontFamily="@font/regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/darker_grey"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/light_gray_outline_gradient"/>


            <EditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/light_gray_outline_gradient"
                android:fontFamily="@font/regular"
                android:hint="@string/note_title"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp" />


            <EditText
                android:id="@+id/writeNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:background="@drawable/light_gray_outline_gradient"
                android:fontFamily="@font/regular"
                android:hint="@string/write_note_here"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/login_btnn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/circular_corner_btn_bg"
                android:backgroundTint="@color/custom_color_dark"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/save_note"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>