<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/regText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_45sdp"
                android:text="@string/upload_home_banner"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/tvDes"
                style="@style/boldText"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/darker_grey"
                android:layout_below="@+id/tvTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/upload_home_ban"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginVertical="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:background="@drawable/dotted_pink_rectangle"
                android:layout_below="@+id/tvDes">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/white_circle_back"
                    android:src="@drawable/ic_cloud"/>

                    <TextView
                        style="@style/regText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/upload_banner"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

            </LinearLayout>


            <TextView
                android:id="@+id/submitBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_corner_btn_bg"
                android:backgroundTint="@color/custom_color_dark"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/done"
                android:layout_marginVertical="@dimen/_15sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>